deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Service
metadata:
  name: istio
  namespace: istio-system
  labels:
    app: istio
spec:
  type: LoadBalancer
  selector:
    app: istio
  ports:
  - name: http2
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio
  template:
    metadata:
      labels:
        app: istio
    spec:
      serviceAccountName: istio
      containers:
      - name: istio
        image: gcr.io/howardjohn-istio/pilot:gateway
        imagePullPolicy: Always
        args:
        - discovery
      - name: proxy
        image: gcr.io/howardjohn-istio/proxyv2:gateway
        args:
        - proxy
        - router
