example.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: GatewayClass
metadata:
  name: istio
spec:
  controller: istio.io/gateway-controller
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  class: istio
  listeners:
  - hostname:
      match: Exact
      name: gateway.local
    port: 80
    protocol: HTTP
    routes:
      namespaceSelector: {}
      routeSelector:
        matchLabels:
          istio.io/gateway: gateway
---
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: http
  namespace: service-apis-demo
  labels:
    istio.io/gateway: gateway
spec:
  hosts:
  - hostname: "gateway.local"
    rules:
    - match:
        pathType: Prefix
        path: /get
      filter:
        headers:
          add:
            my-added-header: added-value
          remove: [my-removed-header]
      action:
        forwardTo:
          targetRef:
            name: httpbin
            group: ""
            resource: ""
